# shake-extra

./: .gitignore  .travis.yml  README.md  shake-extra.cabal
Development/Shake/: Extra.hs
Development/Shake/Extra/: AOC.hs  Arch.hs  Compiler.hs  Dependency.hs  FindLib.hs  OS.hs  ProjectConfig.hs
examples/: ShakeFile.hs  build.cabal  stack.yaml
examples/C/: ShakeFile.hs
examples/C++/: ShakeFile.hs
examples/C++/app/: main.cc
examples/C++/libA/: A.cc  A.h
examples/C++/libB/: B.cc  B.h
examples/C/app/: main.c
examples/C/libA/: A.c
examples/C/libB/: B.h
examples/app/: main.c
examples/libA/: A.h
examples/libB/: B.c
