name:                shake-extra
version:             0.1.0.0
synopsis:            shake for C/C++ development
description:         Please see README.md
homepage:            https://github.com/NicolasDP/shake-extra#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Di Prima
maintainer:          nicolas@di-prima.fr
copyright:           2016 Nicolas Di Prima
category:            Build System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:    Development.Shake.Extra
                      Development.Shake.Extra.AOC
                      Development.Shake.Extra.Arch
                      Development.Shake.Extra.OS
                      Development.Shake.Extra.Compiler
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , shake
