name:                build
version:             0.1.0.0
synopsis:            nothing
description:         Please see README.md
homepage:            https://github.com/NicolasDP/shake-extra#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Di Prima
maintainer:          nicolas@di-prima.fr
copyright:           2016 Nicolas Di Prima
category:            Build System
build-type:          Simple
cabal-version:       >=1.10

executable make
  hs-source-dirs:      .
  main-is:             ShakeFile.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , shake
                     , shake-extra
